--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nodejs-jscoverage (0.0.1-0sg2) lucid; urgency=low
+
+  * UNRELEASED
+
+ -- SimpleGeo Nerds <nerds@simplegeo.com>  Sun, 24 Oct 2010 23:12:24 +0000
+
 nodejs-jscoverage (0.0.1-0sg0) unstable; urgency=low
 
   * Debianized
